microservices/pear/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pear
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pear
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pear
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: pear
    spec:
      containers:
      - name: pear
        image: hashicorp/http-echo
        args:
          - "-text=pear"
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
