microservices/pear/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pear-service
  namespace: dev
spec:
  type: ClusterIP
  # type: LoadBalancer
  selector:
    app.kubernetes.io/instance: pear
  ports:
  - port: 5678
